<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/md_theme_surfaceContainerHighest">

        <TextView
            android:layout_weight="3"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/name"
            android:fontFamily="@font/adlam_display"
            android:textSize="16sp"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_weight="14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:importantForContentCapture="auto"
        app:tabIndicator="@drawable/cat_tabs_pill_indicator"
        app:tabIndicatorFullWidth="true"
        app:tabIndicatorGravity="center"
        app:tabInlineLabel="true"
        app:tabGravity="start"
        app:tabIndicatorHeight="40dp"
        tools:ignore="UnusedAttribute"
        android:background="@color/md_theme_surfaceContainerHighest">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:icon="@drawable/ic_action_launch"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/title_launch"
            android:layout_marginEnd="18dp"/>


        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:icon="@drawable/ic_action_download"
            android:text="@string/title_download"
            android:layout_marginEnd="18dp"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:icon="@drawable/ic_action_setting"
            android:text="@string/title_setting" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:icon="@drawable/ic_action_about"
            android:text="@string/title_about" />
    </com.google.android.material.tabs.TabLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_remove"
                app:tint="@color/material_on_surface_disabled"
                android:background="?attr/selectableItemBackgroundBorderless"/>

            <ImageButton
                android:layout_marginHorizontal="10dp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_close"
                app:tint="@color/material_on_surface_disabled"
                android:background="?attr/selectableItemBackgroundBorderless"/>

        </LinearLayout>


    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>